post master version before accounting